finished css for new.ejs

--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -8,19 +8,20 @@
 </head>
 <body>
     <%- include('../partials/_navbar.ejs') %>
-    <h1>Editing <%= event.title %> </h1>
-    <form action="/users/<%= user._id %>/events/<%= event._id %>?_method=PUT" method="POST">
-    <label for="title">Event Title:</label>
-    <input type="text" name="title" id="title" value="<%= event.title %>" required />
+    <div class="edit-event-wrapper">
+      <h1>Editing <%= event.title %> </h1>
+      <form action="/users/<%= user._id %>/events/<%= event._id %>?_method=PUT" method="POST">
+        <label for="title">Event Title:</label>
+        <input type="text" name="title" id="title" value="<%= event.title %>" required />
 
-    <label for="date">Date:</label>
-    <input type="date" name="date" id="date" value="<%= event.date.toISOString().split('T')[0] %>" min="<%= new Date().toISOString().split('T')[0] %>" required />
+        <label for="date">Date:</label>
+        <input type="date" name="date" id="date" value="<%= event.date.toISOString().split('T')[0] %>" min="<%= new Date().toISOString().split('T')[0] %>" required />
 
-    <label for="location">Location:</label>
-    <input type="text" name="location" id="location" value="<%= event.location %>" required />
+        <label for="location">Location:</label>
+        <input type="text" name="location" id="location" value="<%= event.location %>" required />
 
-    <label for="isPublic">Make this event public?</label>
-    <select name="isPublic" id="isPublic" value="<%= event.isPublic %>"required>
+       <label for="isPublic">Make this event public?</label>
+        <select name="isPublic" id="isPublic" value="<%= event.isPublic %>"required>
           <% if (!event.isPublic) { %>
           <option value="false" selected>No</option>
           <option value="true">Yes</option>
@@ -28,35 +29,36 @@
           <option value="false">No</option>
           <option value="true" selected>Yes</option>
           <% } %>
-    </select>
-
-    <h3>Checklist Item </h3>
-
-    <div id="checklist-container">
-      <% event.checklist.forEach((item, idx) => { %>
-        <div class="checklist-group">
-        <label>Task:</label>
-        <input type="text" name="taskList" id="checklist[<%= idx %>][task]" value="<%= item.task %>" required />
-
-        <label>Is Done?</label>
-        <select name="isDoneList" id="checklist[<%= idx %>][isDone]">
-          <% if (!item.isDone) { %>
-            <option value="false" selected>No</option>
-            <option value="true">Yes</option>
-          <% } else { %>
-            <option value="false">No</option>
-            <option value="true" selected>Yes</option>
-          <% } %>
         </select>
 
-      <button type="button" class="remove-task" onclick="removeChecklistItem(this)">🗑️</button>
-    </div>
-  <% }); %>
-</div>
-    <button type="button" onclick="addChecklistItem()">+ Add Another Task</button>
+     <h2>Checklist Items </h2>
 
-    <button type="submit">Save Edited Event</button>
-</form>
+      <div id="checklist-container">
+        <% event.checklist.forEach((item, idx) => { %>
+          <div class="checklist-group">
+            <label>Task:</label>
+            <input type="text" name="taskList" id="checklist[<%= idx %>][task]" value="<%= item.task %>" required />
+
+            <label>Is Done?</label>
+              <select name="isDoneList" id="checklist[<%= idx %>][isDone]">
+              <% if (!item.isDone) { %>
+                <option value="false" selected>No</option>
+                <option value="true">Yes</option>
+              <% } else { %>
+                <option value="false">No</option>
+                <option value="true" selected>Yes</option>
+              <% } %>
+              </select>
+
+            <button type="button" class="remove-task" onclick="removeChecklistItem(this)">🗑️</button>
+          </div>
+        <% }); %>
+      </div>
+      <button type="button" onclick="addChecklistItem()">+ Add Another Task</button>
+
+      <button type="submit">Save Edited Event</button>
+    </div>
+      </form>
 
 <!-- to dynamically add fields in checklist-->
 <script>
