--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -26,7 +26,7 @@
         <option value="false">No</option>
     </select>
 
-    <h3>Checklist Item </h3>
+    <h3>Checklist Items </h3>
 
     <div id="checklist-container">
       <div class="checklist-group">
